From 390baa4 (ephemeris):
========================

In prisim/examples/simparms/defaultparms.yaml,

(*) Remove parameter timeformat since JD has been adopted as the
standard format

In scripts/run_prisim.py,

(*) Remove use of timestamps and timestamps_JD explicitly as time
objects are maintained
(*) Determine time objects and LST information for all observing
modes
(*) Remove commented lines

In prisim/interferometry.py,

(*) Update docstring under class InterferometerArray on description
of attribute timestamp

From 81730e0 (ephemeris):
========================

In scripts/run_prisim.py,

(*) Remove use of module pyephem throughout
(*) Remove commented lines 

From ffe6790 (ephemeris):
========================

In prisim/interferometry.py,

(*) Import ICRS, FK5, AltAz, and EarthLocation modules from astropy
(*) In member function observe() of class InterferometerArray, inputs
timestamp and lst are replaced with timeobj which is an instance of
class astropy.time.Time. Attributes timestamp and lst are determined
from input timeobj. Update member function docstring accordingly
(*) In member function observe() of class InterferometerArray,  
create sky coordinates from astropy.SkyCoord and transform to AltAz
frame instead of determining Alt-Az from standard transformations

In scripts/run_prisim.py,

(*) Import ICRS, FK5, AltAz, and EarthLocation modules from astropy
(*) Create list of time objects and Local Apparent Sidereal Times from
these time objects
(*) Create sky coordinates from astropy.SkyCoord and transform to
AltAz frame instead of determining Alt-Az from standard
transformations
(*) Pass time object in call to InterferometerArray.observe() instead
of timestamp and lst

Merge 378c269 (master) into 395d61a (ephemeris):
===============================================

(*) Bring changes in master branch into ephemeris branch

From 7c5fdda (gleam):
====================

In prisim/examples/simparms/defaultparms.yaml,

(*) Replace fgparm with skyparm
